--- a/index.html
+++ b/index.html
@@ -123,26 +123,16 @@
   </section>
 
   <!-- ABOUT -->
-  <section id="about" class="section section-content about-hero">
-    <video
-      class="bg-video auto-video"
-      playsinline webkit-playsinline autoplay muted loop
-      preload="metadata"
-      poster="./assets/posters/about-hero.jpg"
-      data-mp4="./assets/videos/20250816_220659_2_1.mp4"
-      data-webm="./assets/videos/20250816_220659_2_1.webm"
-    >
-      <source src="./assets/videos/20250816_220659_2_1.webm" type="video/webm"/>
-      <source src="./assets/videos/20250816_220659_2_1.mp4"  type="video/mp4"/>
-    </video>
-    <div class="overlay">
+  <section id="about" class="section section-content about-hero" 
+    style="background: url('./assets/images/rev1.jpg') center center / cover no-repeat;">
+      <div class="overlay">
       <div class="container">
-        <h2>About Me</h2>
-        <p>Wedding & Event DJ based in Vancouver. House, Hip-Hop, and everything in between — crafted for your moment.</p>
-        <a href="moreabout.html" class="btn">More About Me</a>
+      <h2>About Me</h2>
+      <p>Wedding & Event DJ based in Vancouver. House, Hip-Hop, and everything in between — crafted for your moment.</p>
+      <a href="moreabout.html" class="btn">More About Me</a>
       </div>
-    </div>
-  </section>
+      </div>
+</section>
 
   <!-- QUOTES -->
   <section id="quotes" class="section section-content">
