--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <a href="https://tiktok.com/@alrd1__" target="_blank" class="social"><i class="fab fa-tiktok"></i></a>
         <a href="mailto:alrd1team@gmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a>
       </div>
-      <h2>Thanks for choosing ALRD1!</h2>
+      <h2>Thank you for choosing ALRD1!</h2>
     </div>
   </section>
 
